[gd_scene load_steps=20 format=2]

[ext_resource path="res://character/Player.gd" type="Script" id=1]
[ext_resource path="res://character/Player.png" type="Texture" id=2]
[ext_resource path="res://character/StateMachinePlayer.gd" type="Script" id=3]
[ext_resource path="res://character/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://assets/player/player.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "cam_shake"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, 0 ), Vector2( 4, 4 ), Vector2( -5, 2 ), Vector2( 5, -5 ), Vector2( -2, 2 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "cam_shake (copy)"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, 0 ), Vector2( 4, 4 ), Vector2( -5, 2 ), Vector2( 5, -5 ), Vector2( -2, 2 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 6 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( -4.18235, -10.4023, 4.22661, -11.0329, 4.43684, 11.5661, -3.55168, 11.461 )

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("icon:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("icon:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("icon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("icon:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 10 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 18, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("propulsor:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0561061 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../ProgressBar:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.0388135 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2.3, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("icon:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("icon:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.24, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 1.4 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 14, 15 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 1.4 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ Vector2( 1.5, -2 ), Vector2( 0, -2 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("icon:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("icon:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../ProgressBar:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../ProgressBar:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("icon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.241484, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 1.4 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("icon:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.145966 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.241, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 1.3 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("icon:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("icon:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../ProgressBar:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../ProgressBar:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=12]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("icon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 2.7 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("icon:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1.56917, 0.0457527 ),
"update": 0,
"values": [ Vector2( 1.4, 0.8 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 8, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("icon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.24, 1.51572 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -7.04409 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.164939, 1 ),
"update": 0,
"values": [ Vector2( 0, -1.5 ), Vector2( 0, -15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 0.23, 0.0980731 ),
"update": 0,
"values": [ 0.0, 1.4, -40.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.8, 1.8 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.34151, 1 ),
"update": 0,
"values": [ Vector2( 0, 2.7 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("icon:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.24, 1 ),
"update": 0,
"values": [ Vector2( 1.6, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ Vector2( 1.4, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1.5 ), Vector2( 0, -2 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 0.0, 0.0, 0.0 ]
}

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
margin_left = -16.0
margin_top = -20.0
margin_right = 16.0
margin_bottom = -6.0
rect_scale = Vector2( 1, 0.5 )
size_flags_horizontal = 0
max_value = 2.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttachPosition" type="Position2D" parent="."]
position = Vector2( 0, 3 )

[node name="CamShake" type="AnimationPlayer" parent="."]
anims/cam_shake = SubResource( 1 )
"anims/cam_shake (copy)" = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
pause_mode = 2
limit_left = -20
limit_top = -40
limit_right = 480
limit_bottom = 500
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 3.0
drag_margin_bottom = 0.0
editor_draw_drag_margin = true
script = ExtResource( 4 )

[node name="StateMachinePlayer" type="Node" parent="."]
script = ExtResource( 3 )

[node name="PhysicsShape" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="WallGrabRaycast" type="Node2D" parent="."]

[node name="Right" type="Node2D" parent="WallGrabRaycast"]

[node name="RightWall" type="RayCast2D" parent="WallGrabRaycast/Right"]
position = Vector2( 4, -4 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 2

[node name="RightWall2" type="RayCast2D" parent="WallGrabRaycast/Right"]
position = Vector2( 4, 2 )
rotation = -1.5708
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 1 )
collision_mask = 2

[node name="RightWall3" type="RayCast2D" parent="WallGrabRaycast/Right"]
position = Vector2( 4, 6 )
rotation = -1.5708
exclude_parent = false
cast_to = Vector2( 0, 3 )
collision_mask = 2

[node name="Left" type="Node2D" parent="WallGrabRaycast"]

[node name="LeftWall" type="RayCast2D" parent="WallGrabRaycast/Left"]
position = Vector2( -4, -4 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 2

[node name="LeftWall2" type="RayCast2D" parent="WallGrabRaycast/Left"]
position = Vector2( -4, 2 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 2

[node name="LeftWall3" type="RayCast2D" parent="WallGrabRaycast/Left"]
position = Vector2( -4, 6 )
rotation = 1.5708
cast_to = Vector2( 0, 3 )
collision_mask = 2

[node name="Body" type="Node2D" parent="."]

[node name="propulsor" type="CPUParticles2D" parent="Body"]
position = Vector2( -2.2, 4 )
emitting = false
amount = 20
lifetime = 0.4
randomness = 0.2
local_coords = false
direction = Vector2( 0, 1 )
spread = 32.0
initial_velocity = 40.2
initial_velocity_random = 0.43
color = Color( 1, 0.792157, 0, 1 )

[node name="icon" type="Sprite" parent="Body"]
visible = false
position = Vector2( 0, -7.04409 )
texture = ExtResource( 2 )
hframes = 6
vframes = 2
frame = 10

[node name="LightOccluder2D" type="LightOccluder2D" parent="Body/icon"]
occluder = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
anims/dead = SubResource( 5 )
anims/fall = SubResource( 6 )
anims/glide = SubResource( 7 )
anims/grab = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/jump = SubResource( 10 )
anims/move = SubResource( 11 )
anims/squash = SubResource( 12 )
anims/victory = SubResource( 13 )

[node name="Effect_Player" type="AnimationPlayer" parent="Body"]
anims/land = SubResource( 14 )

[node name="Sprite" type="Sprite" parent="Body"]
texture = ExtResource( 5 )
hframes = 7
vframes = 6
frame = 1

[node name="WallslideCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="WallslideStick" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JetpackLimit" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="killed" from="." to="StateMachinePlayer" method="_on_Player_killed"]
[connection signal="victory" from="." to="StateMachinePlayer" method="_on_Player_victory"]
[connection signal="victory" from="." to="Camera2D" method="_on_Player_victory"]
[connection signal="timeout" from="WallslideStick" to="StateMachinePlayer" method="_on_WallslideStick_timeout"]
[connection signal="timeout" from="JetpackLimit" to="StateMachinePlayer" method="_on_JetpackLimit_timeout"]
[connection signal="timeout" from="JetpackLimit" to="." method="_on_JetpackLimit_timeout"]
